--- a/src/index.scss
+++ b/src/index.scss
@@ -21,3 +21,33 @@ code {
     margin-right: 1rem;
   }
 }
+.alert-enter {
+  opacity: 0;
+}
+.alert-enter-active {
+  transition: opacity 2s ease-out;
+  opacity: 1;
+}
+.alert-exit-active {
+  transition: opacity 2s ease-out;
+  opacity: 0;
+}
+.note-exit-active {
+  animation: note 2s ease-out forwards;
+}
+.note-enter-active {
+  animation-duration: note 2s alternate-reverse;
+}
+@keyframes note {
+  0% {
+    transform: translateX(0);
+  }
+  30% {
+    opacity: .7;
+    transform: translateX(30px);
+  }
+  100% {
+    opacity: 1;
+    transition-duration: translateX(-200px);
+  }
+}
